# langchain-deep-research

./: .gitignore  DESIGN.md  README.md  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt
deep_research_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/agent/: __init__.py  config.py  graph.py  nodes.py  state.py
tests/: conftest.py  test_config.py  test_graph.py  test_integration.py  test_nodes.py  test_state.py
